// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepositoryCard should fire correctly the bookmark button click 1`] = `
<div>
  <div
    class="relative h-36 w-72 basis-72 sm:h-56 sm:w-112 sm:basis-112 flex-shrink-0 flex-grow cursor-pointer snap-center scroll-mx-96 transition-transform sm:hover:z-10 sm:hover:scale-115 sm:hover:shadow-md"
    data-testid="repository-card-id"
  >
    <img
      alt="mock"
      class="h-full w-full"
      src="image://mock"
    />
    <button
      class="absolute top-1 right-1"
      data-testid="bookmark-button"
    >
      <svg
        class="h-8 w-8 fill-yellow stroke-yellow"
        fill="none"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`RepositoryCard should render correctly 1`] = `
<div>
  <div
    class="relative h-36 w-72 basis-72 sm:h-56 sm:w-112 sm:basis-112 flex-shrink-0 flex-grow cursor-pointer snap-center scroll-mx-96 transition-transform sm:hover:z-10 sm:hover:scale-115 sm:hover:shadow-md"
    data-testid="repository-card-id"
  >
    <img
      alt="mock"
      class="h-full w-full"
      src="image://mock"
    />
  </div>
</div>
`;

exports[`RepositoryCard should render correctly the bookmark button 1`] = `
<div>
  <div
    class="relative h-36 w-72 basis-72 sm:h-56 sm:w-112 sm:basis-112 flex-shrink-0 flex-grow cursor-pointer snap-center scroll-mx-96 transition-transform sm:hover:z-10 sm:hover:scale-115 sm:hover:shadow-md"
    data-testid="repository-card-id"
  >
    <img
      alt="mock"
      class="h-full w-full"
      src="image://mock"
    />
    <button
      class="absolute top-1 right-1"
      data-testid="bookmark-button"
    >
      <svg
        class="h-8 w-8 fill-none stroke-yellow"
        fill="none"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`RepositoryCard should render correctly when type is bookmark 1`] = `
<div>
  <div
    class="relative h-28 w-56 max-w-56 basis-56 sm:h-36 sm:w-72 sm:max-w-72 sm:basis-72 flex-shrink-0 flex-grow cursor-pointer snap-center scroll-mx-96 transition-transform sm:hover:z-10 sm:hover:scale-115 sm:hover:shadow-md"
    data-testid="repository-card-id"
  >
    <img
      alt="mock"
      class="h-full w-full"
      src="image://mock"
    />
    <button
      class="absolute top-1 right-1"
      data-testid="bookmark-button"
    >
      <svg
        class="h-6 w-6 fill-yellow stroke-yellow"
        fill="none"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </button>
  </div>
</div>
`;
